# AviaCLI

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
tests/: test_cli_smoke.py  test_dataset_commands.py  test_package_boundary.py
