[project]
name = "avia-python-client-workspace"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.7",
]

[tool.uv.workspace]
members = [
  "packages/avia-cli",
]

[tool.uv.sources]
avia-cli = { workspace = true }

[tool.pytest.ini_options]
pythonpath = [
  "packages/avia-cli/src",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["packages", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C4", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003", "RUF100"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
line-ending = "auto"
